; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_workarounds.c_icl_whitelist_build.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/gt/extr_intel_workarounds.c_icl_whitelist_build.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_engine_cs = type { i32, i32, %struct.i915_wa_list }
%struct.i915_wa_list = type { i32 }

@GEN9_HALF_SLICE_CHICKEN7 = common dso_local global i32 0, align 4
@GEN10_SAMPLER_MODE = common dso_local global i32 0, align 4
@GEN9_SLICE_COMMON_ECO_CHICKEN1 = common dso_local global i32 0, align 4
@PS_INVOCATION_COUNT = common dso_local global i32 0, align 4
@RING_FORCE_TO_NONPRIV_ACCESS_RD = common dso_local global i32 0, align 4
@RING_FORCE_TO_NONPRIV_RANGE_4 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.intel_engine_cs*)* @icl_whitelist_build to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @icl_whitelist_build(%struct.intel_engine_cs* %0) #0 {
  %2 = alloca %struct.intel_engine_cs*, align 8
  %3 = alloca %struct.i915_wa_list*, align 8
  store %struct.intel_engine_cs* %0, %struct.intel_engine_cs** %2, align 8
  %4 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %2, align 8
  %5 = getelementptr inbounds %struct.intel_engine_cs, %struct.intel_engine_cs* %4, i32 0, i32 2
  store %struct.i915_wa_list* %5, %struct.i915_wa_list** %3, align 8
  %6 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %2, align 8
  %7 = getelementptr inbounds %struct.intel_engine_cs, %struct.intel_engine_cs* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %50 [
    i32 129, label %9
    i32 128, label %25
  ]

9:                                                ; preds = %1
  %10 = load %struct.i915_wa_list*, %struct.i915_wa_list** %3, align 8
  %11 = load i32, i32* @GEN9_HALF_SLICE_CHICKEN7, align 4
  %12 = call i32 @whitelist_reg(%struct.i915_wa_list* %10, i32 %11)
  %13 = load %struct.i915_wa_list*, %struct.i915_wa_list** %3, align 8
  %14 = load i32, i32* @GEN10_SAMPLER_MODE, align 4
  %15 = call i32 @whitelist_reg(%struct.i915_wa_list* %13, i32 %14)
  %16 = load %struct.i915_wa_list*, %struct.i915_wa_list** %3, align 8
  %17 = load i32, i32* @GEN9_SLICE_COMMON_ECO_CHICKEN1, align 4
  %18 = call i32 @whitelist_reg(%struct.i915_wa_list* %16, i32 %17)
  %19 = load %struct.i915_wa_list*, %struct.i915_wa_list** %3, align 8
  %20 = load i32, i32* @PS_INVOCATION_COUNT, align 4
  %21 = load i32, i32* @RING_FORCE_TO_NONPRIV_ACCESS_RD, align 4
  %22 = load i32, i32* @RING_FORCE_TO_NONPRIV_RANGE_4, align 4
  %23 = or i32 %21, %22
  %24 = call i32 @whitelist_reg_ext(%struct.i915_wa_list* %19, i32 %20, i32 %23)
  br label %51

25:                                               ; preds = %1
  %26 = load %struct.i915_wa_list*, %struct.i915_wa_list** %3, align 8
  %27 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %2, align 8
  %28 = getelementptr inbounds %struct.intel_engine_cs, %struct.intel_engine_cs* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = add nsw i32 8192, %29
  %31 = call i32 @_MMIO(i32 %30)
  %32 = load i32, i32* @RING_FORCE_TO_NONPRIV_ACCESS_RD, align 4
  %33 = call i32 @whitelist_reg_ext(%struct.i915_wa_list* %26, i32 %31, i32 %32)
  %34 = load %struct.i915_wa_list*, %struct.i915_wa_list** %3, align 8
  %35 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %2, align 8
  %36 = getelementptr inbounds %struct.intel_engine_cs, %struct.intel_engine_cs* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = add nsw i32 8212, %37
  %39 = call i32 @_MMIO(i32 %38)
  %40 = load i32, i32* @RING_FORCE_TO_NONPRIV_ACCESS_RD, align 4
  %41 = call i32 @whitelist_reg_ext(%struct.i915_wa_list* %34, i32 %39, i32 %40)
  %42 = load %struct.i915_wa_list*, %struct.i915_wa_list** %3, align 8
  %43 = load %struct.intel_engine_cs*, %struct.intel_engine_cs** %2, align 8
  %44 = getelementptr inbounds %struct.intel_engine_cs, %struct.intel_engine_cs* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = add nsw i32 9136, %45
  %47 = call i32 @_MMIO(i32 %46)
  %48 = load i32, i32* @RING_FORCE_TO_NONPRIV_ACCESS_RD, align 4
  %49 = call i32 @whitelist_reg_ext(%struct.i915_wa_list* %42, i32 %47, i32 %48)
  br label %51

50:                                               ; preds = %1
  br label %51

51:                                               ; preds = %50, %25, %9
  ret void
}

declare dso_local i32 @whitelist_reg(%struct.i915_wa_list*, i32) #1

declare dso_local i32 @whitelist_reg_ext(%struct.i915_wa_list*, i32, i32) #1

declare dso_local i32 @_MMIO(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
